# g27-mode-switcher

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  LICENSE.fr.md  README.md  build.rs  clippy.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.claude/commands/: build-windows.md  pre-commit.md  status.md
.github/workflows/: ci.yml
docs/design/: maquette-cible.html
src/: autocenter.rs  clavier.rs  cli.rs  config.rs  hid.rs  lib.rs  main.rs  range.rs  report.rs  souris.rs  switcher.rs  usb.rs
src/config/: cles.rs  mod.rs
src/device/: mod.rs  session.rs
src/entree/: lecteur.rs  mod.rs
src/feeder/: mapping.rs  mod.rs
src/ffb/: analyse.rs  autocentrage.rs  calcul.rs  effets.rs  g27.rs  message.rs  mod.rs  reception.rs  sortie.rs
src/gui/: app.rs  carte_forza.rs  carte_pont.rs  log.rs  mod.rs  remap.rs  theme.rs  widgets.rs
src/hidhide/: controle.rs  mod.rs  volume.rs
src/keymapper/: bouton.rs  lecteur.rs  mappage.rs  mod.rs  rapport.rs  touche.rs
src/pont/: detection.rs  mod.rs
src/telemetrie/: mod.rs  modele.rs  pont.rs
src/vjoy/: decouverte.rs  ffb.rs  ffb_effet.rs  mod.rs  position.rs  registre.rs
tests/: README.md
