[package]
name = "g27-mode-switcher"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
# eframe sans wgpu : on ne garde que le backend glow (OpenGL) pour rester léger
# et garder un .exe autonome (DLL système uniquement). `default_fonts` fournit
# les polices de corps par défaut d'egui (Cinzel est embarqué en plus).
eframe = { version = "0.34", default-features = false, features = ["glow", "default_fonts", "x11", "wayland"] }
hidapi = "2.6"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# Sous Windows uniquement : rattachement de la console parente en mode CLI
# (le binaire est compilé en sous-système « windows » pour la GUI).
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Console"] }

[features]
# Tests d'intégration nécessitant un G27 réellement branché (opt-in).
# Lancement : `cargo test --features hardware-tests`. Voir tests/README.md.
hardware-tests = []

# Lints stricts : tout warning Clippy doit être traité (la CI lance
# `cargo clippy ... -- -D warnings`). `unsafe_code` est signalé pour forcer
# un `#[allow(unsafe_code)]` explicite + commentaire `// SAFETY:` au cas où
# un appel FFI bas niveau le rendrait strictement nécessaire.
[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
